--- a/readthedocsext/theme/templates/support/success.html
+++ b/readthedocsext/theme/templates/support/success.html
@@ -2,7 +2,9 @@
 
 {% load i18n %}
 
-{% block title %}{% trans "Support request submitted" %}{% endblock %}
+{% block title %}
+  {% trans "Support request submitted" %}
+{% endblock title %}
 
 {% block support_form %}
   <div class="ui positive message">
@@ -21,7 +23,7 @@
   <p>
     {% blocktrans trimmed with url="https://docs.readthedocs.io/en/latest/index.html#step-by-step-guides" %}
       While you are waiting for a response,
-      you might want to browse <a href="{{ url }}">our guides</a>,
+      you might want to browse <a href="{{ url }}" target="_blank">our guides</a>,
       which provide step-by-step solutions to common support questions.
     {% endblocktrans %}
   </p>
